--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "12.18.2"
+  },
   "author": "T3g4n",
   "license": "ISC",
   "dependencies": {
