--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.14.5"
   },
   "author": "T3g4n",
   "license": "ISC",
