--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ms": "^2.1.2",
     "python": "0.0.4",
     "quick.db": "^7.1.1",
-    "random-puppy": "^1.1.0"
+    "random-puppy": "^1.1.0",
+    "bufferutil": "4.0.1"
   }
 }
