--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "mongoose": "^5.10.0",
     "ms": "^2.1.2",
     "nodemon": "^2.0.4",
     "python": "0.0.4",
