--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "this is a test"
+    "test": "this is a test",
+    "dev": "npx nodemon"
   },
   "engines": {},
   "author": "T3g4n",
@@ -13,6 +14,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "enmap": "^5.7.0",
     "mongoose": "^5.10.0",
     "ms": "^2.1.2",
     "nodemon": "^2.0.4",
