--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg": "0.0.4",
     "mongoose": "^5.10.1",
     "ms": "^2.1.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "random-puppy": "^1.1.0"
   },
