--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "T3g4n",
   "license": "ONLY ME",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "enmap": "^5.7.0",
@@ -20,7 +21,9 @@
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
-    "random-puppy": "^1.1.0"
+    "random-puppy": "^1.1.0",
+    "yt-search": "^2.3.1",
+    "ytdl-core": "^3.3.0"
   },
   "devDependencies": {}
 }
