--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "random-puppy": "^1.1.0",
+    "twitch": "^4.2.4",
+    "twitch-webhooks": "^4.2.4",
     "yt-search": "^2.3.1",
     "ytdl-core": "^3.3.0"
   },
