--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
+    "novelcovid": "^3.0.0",
     "random-puppy": "^1.1.0",
     "twitch": "^4.2.4",
     "twitch-webhooks": "^4.2.4",
