--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-bot",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,12 +20,13 @@
     "mongoose": "^5.10.1",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "novelcovid": "^3.0.0",
     "pm2": "^4.5.0",
     "random-puppy": "^1.1.0",
     "trello": "^0.10.0",
     "twitch": "^4.2.4",
+    "twitch-getter": "^1.1.7",
     "twitch-webhooks": "^4.2.4",
     "yt-search": "^2.3.1",
     "ytdl-core": "^3.3.0"
