--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guildster",
-  "version": "4.1.0",
+  "version": "4.1.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "enmap": "^5.7.0",
     "ffmpeg": "0.0.4",
+    "fortnite": "^4.3.2",
     "mongoose": "^5.10.1",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
