--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guildster",
-  "version": "4.1.5",
+  "version": "4.5.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,11 @@
     "dev": "nodemon index.js && cls"
   },
   "engines": {
-    "node": "15.2.1"
+    "node": "15.2.1",
+    "npm": "6.14.9"
   },
   "author": "T3g4n",
-  "license": "ONLY ME",
+  "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.3.1",
