--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "bufferutil": "^4.0.2",
+    "crypto": "^1.0.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "enmap": "^5.7.0",
