--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "bufferutil": "^4.0.2",
+    "check-swear": "^1.1.0",
     "crypto": "^1.0.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
