--- a/package.json
+++ b/package.json
@@ -2,39 +2,25 @@
   "name": "guildster",
   "version": "5.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js && cls"
-  },
-  "engines": {
-    "node": "15.2.1",
-    "npm": "6.14.9"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "T3g4n",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
-    "bufferutil": "^4.0.2",
+    "@discordjs/opus": "^0.6.0",
     "check-swear": "^1.1.0",
-    "crypto": "^1.0.1",
-    "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
-    "enmap": "^5.7.0",
-    "fortnite": "^4.3.2",
-    "mongoose": "^5.11.7",
-    "ms": "^2.1.2",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6",
-    "novelcovid": "^3.0.0",
-    "pm2": "^4.5.0",
+    "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.3",
+    "ms": "^2.1.3",
+    "node-fetch": "^3.0.0",
+    "novelcovid": "^3.0.2",
     "random-puppy": "^1.1.0",
-    "trello": "^0.10.0",
-    "twitch": "^4.2.4",
-    "twitch-getter": "^1.1.7",
-    "twitch-webhooks": "^4.2.4",
-    "yt-search": "^2.3.1",
-    "ytdl-core": "^3.3.0"
-  },
-  "devDependencies": {}
+    "trello": "^0.3.0",
+    "yt-search": "^0.1.1",
+    "ytdl-core": "^4.9.1"
+  }
 }
