--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "bufferutil": "^4.0.5",
     "check-swear": "^1.1.0",
+    "discord-api-types": "^0.24.0",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
+    "fortnite": "^4.3.2",
     "mongodb": "^4.1.3",
+    "mongoose": "^6.0.11",
     "ms": "^2.1.3",
     "node-fetch": "^3.0.0",
     "novelcovid": "^3.0.2",
     "random-puppy": "^1.1.0",
     "trello": "^0.3.0",
-    "yt-search": "^0.1.1",
+    "twitch": "^4.6.7",
+    "yt-search": "^2.10.2",
     "ytdl-core": "^4.9.1"
   }
 }
