--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "fortnite": "^4.3.2",
-    "mongodb": "^4.1.3",
-    "mongoose": "^6.0.11",
+    "mongoose": "5.11.7",
     "ms": "^2.1.3",
     "node-fetch": "^3.0.0",
     "novelcovid": "^3.0.2",
